fix padding on mobile

--- a/style.css
+++ b/style.css
@@ -213,7 +213,7 @@ h1 {
   background: var(--dark);
   border-radius: 0.4em;
   margin-left: 20px;
-  max-width: 328px;
+  max-width: 310px;
   color: var(--light);
   padding: 15px 30px;
 }
